implemented saveNewBeer operation and tested it